k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agrios-india
  namespace: agrios-india
  labels:
    app: agrios-india
spec:
  type: ClusterIP
  selector:
    app: agrios-india
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
